@@ -7,13 +7,12 @@
 
 m4_define([extrae_major_version], [3])
 m4_define([extrae_minor_version], [5])
-m4_define([extrae_micro_version], [0-rc1])
+m4_define([extrae_micro_version], [0-rc4])
 
 m4_define([extrae_version],
 					      [extrae_major_version.extrae_minor_version.extrae_micro_version])
 
 # Initialize autoconf & define package name, version and bug-report address 
-#  -- keep version in sync with src/common/extrae_version.h
 AC_INIT(Extrae, [extrae_version], tools@bsc.es)
 
 # Safety check to ensure that the directory told with `--srcdir` contains the source code
