@@ -26,8 +26,6 @@
 
 #include <config.h>
 
-#include "extrae_version.h"
-
 #include "types.h"
 
 #ifdef HAVE_UNUSED_ATTRIBUTE
